Fix some layout issues in smaller screens

--- a/docs/homepage.css
+++ b/docs/homepage.css
@@ -87,7 +87,7 @@ header {
 	background-image: url(./Images/Pasfoto.png);
 	background-repeat: no-repeat;
   	background-size: cover;
-	background-position: -30px 0px;
+	background-position: 55% 50%;
 	border-radius: 50%;
 	display: none;
 	width: 400px;
@@ -150,10 +150,6 @@ header {
 	text-align: center;
 }
 
-.to-github {
-
-}
-
 .to-github span {
 	width: 100%;
 	height: 100%;
@@ -180,6 +176,7 @@ header {
 
 .card-container {
 	display: flex;
+	flex-wrap: wrap;
 	margin: 0 auto;
 	max-width: 80%;
 }
@@ -187,11 +184,11 @@ header {
 .card {
 	border-radius: 5%;
 	margin: 0 auto;
-	max-width: 250px;
 	padding: 20px 30px;
 	position: relative;
 	transition: all 0.5s;
 	text-align: center;
+	width: 250px;
 }
 
 .card span {
